[gd_scene load_steps=2 format=3 uid="uid://7vswr8cer6ab"]

[ext_resource type="Script" path="res://panels/AnimationEditor/SceneTrackItem.gd" id="1_7ta3i"]

[node name="PanelContainer" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(5, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_7ta3i")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.0627451, 0.0627451, 0.0627451, 0.192157)

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_right = 1.0
offset_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="LeftHandle" type="ColorRect" parent="."]
custom_minimum_size = Vector2(5.04, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
size_flags_horizontal = 0
mouse_default_cursor_shape = 15
color = Color(0, 0, 0, 0.458824)

[node name="RightHandle" type="ColorRect" parent="."]
custom_minimum_size = Vector2(5.04, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8
mouse_default_cursor_shape = 15
color = Color(0, 0, 0, 0.458824)

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="gui_input" from="LeftHandle" to="." method="_on_left_handle_gui_input"]
[connection signal="gui_input" from="RightHandle" to="." method="_on_right_handle_gui_input"]
